BHBC-1905: Update api to respond with metadata array

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -83,3 +83,9 @@ dd {
 .mapLocations dd {
   display: inline-block;
 }
+
+.leaflet-popup-content {
+  max-height: 300px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
