got new datasets in place

--- a/app/src/styles/handlebar.scss
+++ b/app/src/styles/handlebar.scss
@@ -1,4 +1,12 @@
 .hbr-container {
+
+  .dataset-title {
+    font-family: Noto Sans;
+    font-size: 32px;
+    color: #000000;
+    text-decoration: none solid rgb(0, 0, 0);
+  }
+
   h1 {
     font-size: '2.25rem';
     font-weight: 700;
