--- a/app/src/styles/handlebar.scss
+++ b/app/src/styles/handlebar.scss
@@ -4,16 +4,18 @@
   .hbr-header {
     display: flex;
     flex-direction: column;
+    padding-bottom: 16px;
 
     .hbr-header-title-primary {
       font-size: 32px;
       color: #000000;
+      font-weight: bold;
       text-decoration: none solid rgb(0, 0, 0);
     }
 
     .hbr-header-title-secondary {
-      font-size: 20px;
-      color: #000000;
+      font-size: 16px;
+      color: #787f81;
       text-decoration: none solid rgb(0, 0, 0);
     }
   }
@@ -23,24 +25,28 @@
       border-radius: 6px;
       background-color: #ffffff;
       background-size: cover;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 18px 25px;
     }
     
-    .meta-container {
-      display: flex;
-      & + .meta-container {
-        margin-top: 1rem;
-      }
-  
-      .meta-title-container {
-        flex: 1;
-      }
-  
-      .meta-body-container {
-        flex: 2;
-        max-width: 92ch;
+    .details-container-meta {
+      padding: 0px 25px;
+      .meta-container {
+        display: flex;
+        & + .meta-container {
+          margin-top: 1rem;
+        }
+    
+        .meta-title-container {
+          flex: 1;
+        }
+    
+        .meta-body-container {
+          flex: 2;
+          max-width: 92ch;
+        }
       }
     }
   }
-
-
 }
