--- a/app/src/styles/handlebar.scss
+++ b/app/src/styles/handlebar.scss
@@ -30,7 +30,7 @@
       font-size: 20px;
       font-weight: bold;
       padding: 18px 25px;
-      border-bottom: solid #dadada;
+      border-bottom: solid thin #dadada;
       border-radius: 6px 6px 0 0;
     }
 
