added project coordinator

--- a/app/src/styles/handlebar.scss
+++ b/app/src/styles/handlebar.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  .hbr-project-coordinator {
+    list-style-type: none;
+    padding: 0;
+  }
+
   .details-container {
     border-radius: 6px;
     background-color: #ffffff;
