fixed up CSS/ UI

--- a/app/src/styles/handlebar.scss
+++ b/app/src/styles/handlebar.scss
@@ -1,28 +1,24 @@
 .hbr-header {
   display: flex;
   flex-direction: column;
-  padding: 24px;
-  margin-bottom: 16px;
-  background-color: #ffffff;
 
   .hbr-header-title-primary {
     font-size: 32px;
-    color: #000000;
+    color: #313132;
     font-weight: bold;
-    text-decoration: none solid rgb(0, 0, 0);
+    margin: 0;
   }
 
-  .hbr-header-title-secondary {
+  .hbr-header-badge {
     background-color: #d9eaf7;
     border-radius: 16px;
     padding: 5px 10px;
     width: fit-content;
     font-size: 10px;
-    font-family: sans-serif;
     font-weight: bold;
-    color: black;
+    color: #313132;
     text-transform: uppercase;
-    text-decoration: none solid rgb(0, 0, 0);
+    margin-top: 6px;
   }
 }
 
